--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 GEMINI_API_KEY=AIzaSyCduzK3KaxUIlMig1GqIOKWZXQZsZkAKpc
+OPENAI_API_KEY=sk-metuxbkousrnoflwciwwvifhqdmghzocttcpneyqtufwljia
+OPENAI_BASE_URL=https://api.siliconflow.cn/v1
